upload images fixed

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,15 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&family=Poppins:wght@400;700&family=Silkscreen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/styles.css" />
-    <title>Home</title>
+    <title>Blog</title>
 </head>
 <body>
     <!-- navbar -->
     <div class="top">
         <div class="topLeft">
-            <!-- <i class="topIcon fa-solid fa-envelope"></i> -->
-            <i class="topIcon fa-brands fa-github"></i>
-            <i class="topIcon fa-brands fa-linkedin"></i>
+            <a href='https://github.com/elliehkim'><i class="topIcon fa-brands fa-github"></i></a>
+            <a href='https://www.linkedin.com/in/ellie-hyein-kim-2b85b8213/'><i class="topIcon fa-brands fa-linkedin"></i></a>
         </div>
         <div class="topCenter">
             <ul class='topList'>
