--- a/website/templates/write.html
+++ b/website/templates/write.html
@@ -2,7 +2,7 @@
 {% block content %} 
 
     <div class="write">
-       <form method='POST' action="{{url_for('views.write')}}" class="writeForm">
+       <form method='POST' action="{{url_for('views.write')}}" class="writeForm" enctype="multipart/form-data">
         <div class="writeFormGroup">
             <input type="text" name = "title" placeholder="Title" class="writeInput" autofocus>
         </div>
@@ -10,16 +10,8 @@
             <textarea placeholder="Tell your story..." type="text" name = "content" class="writeInput writeText"></textarea>
         </div>
        
-        <!-- <div class="writeFormGroup">
-            <label for="fileInput">
-                <i class="writeIcon fa-solid fa-file-arrow-up"></i>
-                <span>Upload File</span>
-            </label>
-            <input type="file" id="fileInput" style="display:none">
-        </div> -->
-
         <div class="writeFormGroup">
-            <input placeholder="Image URL" type="text" name = "imgURL" class="writeImageURL">
+            <input type="file" id="imageInput" name="image">
         </div>
 
         <div class="writeButton">
